diesel_compile_tests/tests/fail/cannot_mix_aggregate_and_non_aggregate_selects.stderr
error[E0277]: the trait bound `diesel::expression::is_aggregate::No: MixedAggregates<diesel::expression::is_aggregate::Yes>` is not satisfied
  --> tests/fail/cannot_mix_aggregate_and_non_aggregate_selects.rs:20:24
   |
20 |     let source = users.select((id, count_star()));
   |                        ^^^^^^ the trait `MixedAggregates<diesel::expression::is_aggregate::Yes>` is not implemented for `diesel::expression::is_aggregate::No`
   |
   = help: the following implementations were found:
             <diesel::expression::is_aggregate::No as MixedAggregates<diesel::expression::is_aggregate::Never>>
             <diesel::expression::is_aggregate::No as MixedAggregates<diesel::expression::is_aggregate::No>>
   = note: required because of the requirements on the impl of `ValidGrouping<()>` for `(columns::id, CountStar)`
   = note: required because of the requirements on the impl of `SelectDsl<(columns::id, CountStar)>` for `SelectStatement<FromClause<users::table>>`

error[E0277]: the trait bound `diesel::expression::is_aggregate::No: MixedAggregates<diesel::expression::is_aggregate::Yes>` is not satisfied
  --> tests/fail/cannot_mix_aggregate_and_non_aggregate_selects.rs:22:24
   |
22 |     let source = users.select(nullable_int_col + max(nullable_int_col));
   |                        ^^^^^^ the trait `MixedAggregates<diesel::expression::is_aggregate::Yes>` is not implemented for `diesel::expression::is_aggregate::No`
   |
   = help: the following implementations were found:
             <diesel::expression::is_aggregate::No as MixedAggregates<diesel::expression::is_aggregate::Never>>
             <diesel::expression::is_aggregate::No as MixedAggregates<diesel::expression::is_aggregate::No>>
   = note: required because of the requirements on the impl of `ValidGrouping<()>` for `diesel::internal::derives::numeric_ops::Add<columns::nullable_int_col, diesel::expression::functions::aggregate_ordering::max::max<diesel::sql_types::Nullable<diesel::sql_types::Integer>, columns::nullable_int_col>>`
   = note: required because of the requirements on the impl of `SelectDsl<diesel::internal::derives::numeric_ops::Add<columns::nullable_int_col, diesel::expression::functions::aggregate_ordering::max::max<diesel::sql_types::Nullable<diesel::sql_types::Integer>, columns::nullable_int_col>>>` for `SelectStatement<FromClause<users::table>>`

error[E0277]: the trait bound `diesel::expression::is_aggregate::No: MixedAggregates<diesel::expression::is_aggregate::Yes>` is not satisfied
  --> tests/fail/cannot_mix_aggregate_and_non_aggregate_selects.rs:24:24
   |
24 |     let source = users.select(f(nullable_int_col, max(nullable_int_col)));
   |                        ^^^^^^ the trait `MixedAggregates<diesel::expression::is_aggregate::Yes>` is not implemented for `diesel::expression::is_aggregate::No`
   |
   = help: the following implementations were found:
             <diesel::expression::is_aggregate::No as MixedAggregates<diesel::expression::is_aggregate::Never>>
             <diesel::expression::is_aggregate::No as MixedAggregates<diesel::expression::is_aggregate::No>>
   = note: required because of the requirements on the impl of `ValidGrouping<()>` for `__Derived<columns::nullable_int_col, diesel::expression::functions::aggregate_ordering::max::max<diesel::sql_types::Nullable<diesel::sql_types::Integer>, columns::nullable_int_col>>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `ValidGrouping<()>` for `f::f<columns::nullable_int_col, diesel::expression::functions::aggregate_ordering::max::max<diesel::sql_types::Nullable<diesel::sql_types::Integer>, columns::nullable_int_col>>`
   = note: required because of the requirements on the impl of `SelectDsl<f::f<columns::nullable_int_col, diesel::expression::functions::aggregate_ordering::max::max<diesel::sql_types::Nullable<diesel::sql_types::Integer>, columns::nullable_int_col>>>` for `SelectStatement<FromClause<users::table>>`
